rust/macros/tests/invalid/target/debug/deps/double_commas_rs-43449a7cd505a5f1.d
/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/double_commas_rs-43449a7cd505a5f1: double-commas.rs

/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/double_commas_rs-43449a7cd505a5f1.d: double-commas.rs

double-commas.rs:
